# info_601_tp1

./: CMakeLists.txt  README.md  block.c  cell.c  flake.c  info.c  list.c  main.c  ncurses_extra.c  simu.c  status.c  window.c
headers/: block.h  cell.h  flake.h  info.h  list.h  simu.h  status.h  window.h
